# LD-ZNet

./: environment.yaml  pyproject.toml
ldm_seg/data/: pascal_zeroshot.py  phrasecut.py
ldm_seg/models/: autoencoder.py
ldm_seg/models/ldznet/: ldznet_model.py
ldm_seg/modules/diffusionmodules/: ldznet_UNet.py  model.py  util.py
ldm_seg/modules/image_degradation/: bsrgan.py  bsrgan_light.py
scripts/: img2mask.ipynb  ldznet_txt2mask.py
src/ldm_seg/: lr_scheduler.py  util.py
src/ldm_seg/data/: lsun.py  pascal_zeroshot.py  phrasecut.py
src/ldm_seg/data/dnnlib/: util.py
src/ldm_seg/models/: autoencoder.py
src/ldm_seg/models/diffusion/: classifier.py  ddim.py  ddpm.py  plms.py
src/ldm_seg/models/ldznet/: ldznet_model.py
src/ldm_seg/modules/: attention.py  ldznet_attention.py  x_transformer.py
src/ldm_seg/modules/diffusionmodules/: ldznet_UNet.py  model.py  openaimodel.py  util.py
src/ldm_seg/modules/encoders/: modules.py
src/ldm_seg/modules/image_degradation/: __init__.py  bsrgan.py  bsrgan_light.py  utils_image.py
src/ldm_seg/modules/losses/: __init__.py
testing_scripts/: img2mask.ipynb
